# dj-react-todo

./: .gitignore  README.md  pyproject.toml
src/core/: settings.py  urls.py  views.py
src/frontend/: package.json  vite.config.ts
src/frontend/src/: App.tsx  index.scss  main.tsx
src/templates/: base.html  index.html
